--- Version 1.0.8

- Fix addon not closing properly when "Store Preferences" is used (Kodi Freeze on Piers)

--- Version 1.0.7

- New option to always prefer Original audio tracks if present. Based on a list e.g: eng,ger,fre
	If one is found we force activate it and skip usual audio preference evaluation. Uses 'isoriginal' tag.
- Add Swedish translation in Addon.xml (Thanks to Yeager)
- Custom Conditional Subs preferences : new -ff tag to prioritize Forced flagged subtitles e.g: Jpn:Eng-ff
- Fix a bug in Custom Conditional Subs : when no preference matched, default subtitles stayed on despite option turn_subs_off
- Avoid running multiple instances of the LPM addon
- Use logger.py across all modules. Cleanup. Fix minor bug in settings.xml.

--- Version 1.0.6

- New option to store persistent media preferences on a per TVshow/Movie basis, based on user selection.
	These override calculated preferences - See README for more (Thanks to SgtJalau!)
- Consider empty subtitle language code as und/Undefined so it can still be prioritized in rules, not just ignored
- Adding Swedish translastion (Thanks to Yeager)

--- Version 1.0.5

- Add Norwegian Bokmal (nb,nob), New Nowegian (nn,nno) and English Middle (enm) language codes according to ISO639-2.
- Clean-up some info/log message.

--- Version 1.0.4

- Fix and simplify Signs & Songs subtagging (was colliding with language codes subtagging ie. pt-br). Thanks to BrutuZ!

--- Version 1.0.3

- Improve 10sec subs latency workaround: new option to disable it (default), or enable it at 'start only' or 'start+resume'.
   (fast multiple resumes could sometimes generate video restart or long freeze due to large audio/video desynch)
- Option to prioritize 'SignsSongs' tracks via custom conditional sub preferences. Syntax is ...>Eng:Eng-ss>...
   (Overrides general 'Ignore Signs and Songs toggle' or 'Blacklisting Signs via keyword', if ever used)